--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "aws-serverless-express": "^3.4.0",
     "axios": "^1.8.2",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
@@ -7,6 +8,7 @@
     "mysql2": "^3.13.0",
     "pg": "^8.14.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.6"
+    "sequelize": "^6.37.6",
+    "serverless-http": "^3.2.0"
   }
 }
