--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,3 +1,9 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" },
+    {
+      "source": "/api/paystack/:path*",
+      "destination": "http://44.243.115.34:3000/api/paystack/:path*"
+    }
+  ]
 }
