--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,27 @@
 {
    "name": "server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"No test specified\"",
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "aws-serverless-express": "^3.4.0",
-    "axios": "^1.8.2",
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mysql2": "^3.13.0",
-    "pg": "^8.14.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.6",
-    "serverless-http": "^3.2.0"
-  }
+   "version": "1.0.0",
+   "main": "index.js",
+   "scripts": {
+      "test": "echo \"No test specified\"",
+      "start": "node server.js"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
+   "description": "",
+   "dependencies": {
+      "aws-serverless-express": "^3.4.0",
+      "axios": "^1.8.2",
+      "body-parser": "^1.20.3",
+      "cors": "^2.8.5",
+      "dotenv": "^16.4.7",
+      "express": "^4.21.2",
+      "mysql2": "^3.13.0",
+      "node-cron": "^3.0.3",
+      "pg": "^8.14.0",
+      "pg-hstore": "^2.3.4",
+      "sequelize": "^6.37.6",
+      "serverless-http": "^3.2.0"
+   }
 }
